cha-pre-live-flux2/cha-eks-5a/namespaces/hpt-uat/namespace-hpt-uat.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: hpt-uat
  name: hpt-uat
